# custom-docling-plugins

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api_usage/: api_usage_plugin.py
api_usage/datamodel/pipeline_options/: picture_description_api_model_with_usage.py
api_usage/datamodel/utils/: api_image_request_with_usage.py
api_usage/models/: picture_description_api_model.py
docling/: __init__.py  api_usage.py  picture_description_api_model.py  picture_description_api_model_with_token.py
